<package>
  <name>crane_x7</name>
  <version>2.0.0</version>
  <description>
    ROS package suite of CRANE-X7
  </description>
  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>
  <author email="geoffrey.biggs@aist.go.jp">Geoffrey Biggs</author>
  <author email="tiryoh@gmail.com">Daisuke Sato</author>
  <author email="s.aoki@rt-net.jp">Shota Aoki</author>

  <license>Apache License 2.0</license>

  <url type="website">http://wiki.ros.org/crane_x7</url>
  <url type="bugtracker">https://github.com/rt-net/crane_x7_ros/issues</url>
  <url type="repository">https://github.com/rt-net/crane_x7_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>crane_x7_control</run_depend>
  <run_depend>crane_x7_description</run_depend>
  <run_depend>crane_x7_examples</run_depend>
  <run_depend>crane_x7_moveit_config</run_depend>
  <run_depend>crane_x7_msgs</run_depend>
  <run_depend>crane_x7_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
