<?xml version="1.0"?>
<package>
  <name>crane_x7_control</name>
  <version>0.0.0</version>
  <description>The CRANE-X7 control package</description>

  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>
  <author email="geoffrey.biggs@aist.go.jp">Geoffrey Biggs</author>

  <license>NON-COMMERCIAL LICENSE AGREEMENT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>crane_x7_msgs</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>dynamixel_sdk</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>crane_x7_msgs</run_depend>
  <run_depend>gripper_action_controller</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>

   <export>

  </export>
</package>
