<?xml version="1.0"?>
<package format="2">
  <name>crane_x7_gazebo</name>
  <version>0.0.0</version>
  <description>The crane_x7_gazebo package</description>

  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <maintainer email="macakasit@gmail.com">ShotaAk</maintainer>

  <license>NON-COMMERCIAL LICENSE AGREEMENT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_export_depend>gazebo</build_export_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>roboticsgroup_gazebo_plugins</exec_depend>
  <exec_depend>roslang</exec_depend>
  <exec_depend>urdf_parser_plugin</exec_depend>

</package>
