<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crane_x7_moveit_config</name>
  <version>4.4.0</version>
  <description>CRANE-X7 move_group config package</description>
  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <license>Apache License 2.0</license>

  <author email="s.aoki@rt-net.jp">Shota Aoki</author>
  <author email="kuwagata@rt-net.jp">Atsushi Kuwagata</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>crane_x7_description</depend>
  <depend>moveit</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
