<?xml version="1.0"?>
<package format="2">
  <name>crane_x7_msgs</name>
  <version>0.0.1</version>
  <description>The crane_x7_msgs package</description>

  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>

  <license>NON-COMMERCIAL LICENSE AGREEMENT</license>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
